# Elliotts-Casper-Controller

./: .gitignore  ElliotsCasperController.spec  ElliottsCasperController.spec  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
elliotts_casper_controller/: __init__.py  __main__.py  amcp_client.py  config_manager.py  core.py  gui_launcher.py  process_manager.py
scripts/: restart_channel.ps1  start_caspar.ps1
