[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elliotts-casper-controller"
version = "0.1.0"
description = "Elliott's Casper Controller - Desktop app and web UI for managing CasparCG with NDI outputs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BlueElliott", email = "elliott.ramdass10@gmail.com"}
]
keywords = ["casparcg", "ndi", "broadcast", "graphics", "control", "singular", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
]

build = [
    "pyinstaller>=6.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/BlueElliott/Elliotts-Casper-Controller"
Repository = "https://github.com/BlueElliott/Elliotts-Casper-Controller"
Issues = "https://github.com/BlueElliott/Elliotts-Casper-Controller/issues"
Documentation = "https://github.com/BlueElliott/Elliotts-Casper-Controller#readme"

[project.scripts]
elliotts-casper-controller = "elliotts_casper_controller.core:main"

[tool.setuptools]
packages = ["elliotts_casper_controller"]

[tool.setuptools.package-data]
elliotts_casper_controller = ["*.json"]
"*" = ["static/*"]

# ==================== BLACK ====================
[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

# ==================== RUFF ====================
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
]
ignore = [
    "E501",
]

# ==================== BANDIT ====================
[tool.bandit]
exclude_dirs = [".venv", "venv", "build", "dist"]
skips = ["B101"]
